--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
                  android:allowBackup="false"
                  android:debuggable="true"
                  android:supportsRtl="false"
-                 tools:ignore="HardcodedDebugMode">
+                 tools:ignore="HardcodedDebugMode"
+                 android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 
         <activity android:name="ConnectActivity"
                   android:label="@string/app_name"
