--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,8 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Wed May 16 13:58:56 CST 2018
+# For customization when using a Version Control System, please read the
+# header note.
+#Sat Jul 14 08:41:04 CST 2018
+ndk.dir=D\:\\Android\\sdk\\ndk-bundle
 sdk.dir=D\:\\Android\\sdk
